# coordgen-rs

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs
tests/: interface.rs
wrapper/: CMakeLists.txt  example.c  get_coordinates.cpp  get_coordinates.h
