[package]
name = "coordgen"
version = "0.1.0"
edition = "2018"
description = "A thin rust wrapper around coordgen"
homepage = "https://github.com/mustafa-guler/coordgen-rs"
repository = "https://github.com/mustafa-guler/coordgen-rs"
readme = "README.md"
categories = ["science", "api-bindings"]
keywords = ["molecule", "visualization", "coordinate", "generation"]
license = "MIT"

[build-dependencies]
cc = "1.0.70"
cmake = "0.1.45"

[dev-dependencies]
reqwest = { version = "0.11.4", features = ["rustls-tls", "blocking", "json"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
